# rust-crud-server

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  sol-api.rs
src/api/: mod.rs  router.rs
src/application/: mod.rs
src/application/commands/: create_todo_command.rs  mod.rs
src/data/: mod.rs
src/data/db_context/: surreal_context.rs
src/data/repositories/: todo_repository.rs
src/domain/: mod.rs
src/domain/models/: mod.rs  todo.rs
